--- a/config/plasma_v1/plasma_v1.ini
+++ b/config/plasma_v1/plasma_v1.ini
@@ -10,6 +10,10 @@ VERSION = 1.1
 [DISPLAY]
 DISPLAY = qtpyvcp
 VCP = plasma_v1
+FULLSCREEN = False
+# One of DEBUG, INFO, WARN, ERROR or CRITICAL
+LOG_LEVEL = ERROR
+HIDE_CURSOR = False
 EDITOR = gedit
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
@@ -26,6 +30,14 @@ INTRO_TIME = 1
 PROGRAM_PREFIX = /home/john/linuxcnc/nc_files
 INCREMENTS = .1in .05in .01in .005in .001in .0005in .0001in
 CONFIRM_EXIT = False
+
+[VTK]
+MACHINE_BOUNDRY = True
+MACHINE_TICKS = False
+MACHINE_LABELS = False
+PROGRAM_BOUNDRY = False
+PROGRAM_TICKS = False
+PROGRAM_LABELS = False
 
 [KINS]
 JOINTS = 3
@@ -74,13 +86,13 @@ TOOL_TABLE = tool.tbl
 MAX_VELOCITY = 1.0
 MAX_ACCELERATION = 30.0
 MIN_LIMIT = -0.01
-MAX_LIMIT = 8.0
+MAX_LIMIT = 52.0
 
 [JOINT_0]
 TYPE = LINEAR
 HOME = 0.0
 MIN_LIMIT = -0.01
-MAX_LIMIT = 8.0
+MAX_LIMIT = 52.0
 MAX_VELOCITY = 1.0
 MAX_ACCELERATION = 30.0
 STEPGEN_MAXACCEL = 37.5
@@ -94,13 +106,13 @@ HOME_SEQUENCE = 0
 MAX_VELOCITY = 1.0
 MAX_ACCELERATION = 30.0
 MIN_LIMIT = -0.01
-MAX_LIMIT = 8.0
+MAX_LIMIT = 36.0
 
 [JOINT_1]
 TYPE = LINEAR
 HOME = 0.0
 MIN_LIMIT = -0.01
-MAX_LIMIT = 8.0
+MAX_LIMIT = 36.0
 MAX_VELOCITY = 1.0
 MAX_ACCELERATION = 30.0
 STEPGEN_MAXACCEL = 37.5
